Basic bulgarian translation added. Stable version.

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -1,80 +1,69 @@
 {
 	"headerh1": "Къща за гости Сезони",
-	"Home": "Начало",
-	"Booking": "Резервация",
-	"Gallery": "Галерия",
-	"Rates": "Цени",
-	"Location": "Място",
-	"Contact": "Контакти",
-	"ratestblth1": "Брой Гости",
-	"ratestblth2": "Октомври до Май",
-	"ratestblth3": "Юни и Сеп­тември",
-	"ratestblth4": "Юли и Август",
-	"upto": "до",
-	"contact": "contact",
-	"contactmaindesc": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля използвайте формата за контакт предоставена по долу и служител от нашият персонал ще ви отговори в рамките на 2 работни дни. Ние ценим вашите коментари, било то добри или не толкова добри. Надяваме се да не получаваме от вторите, но ако имате някаква причина за оплакване, моля не се колебайте и се свържете с нас - вашите впечатления са важни за нас и ще ни помогнат да подобрим нашите услуги.", 
-	"homemaindesc": "Къща за гости Сезони е една от най-добрите с 3 звезди в Албена. Разположена е на края на Албена в старото рибарско селище 'Златната Рибка'. В наши дни 'Златната Рибка' е зона за живеене на кратко разстояние от центъра на Албена и е само на няколко минути от плажа. Къща за гости Сезони предлага 4 удобни апартаменти с климатик с изглед към морето. Тъй като сме частен и семейно поддържан хотел, това ни позволява да се отнасяме с нашите гости със специално внимание и с уважение и очакваме това да бъде взаимно. Също така имаме много добри професионални взаимоотношения с много от местните бизнеси и познаваме много хора в околност, така че ако ви е неопходима помощ или съвет ние сме готови да помогнем където имаме възможност. Приятелската атмосфера за нашите гости е винаги била добре посрещната както и добър съвет даден с усмивка. Винаги се опитваме да направим престоя на гостите ни възможно най-добър и приятен.",
-	"homebooking": "Ако желаете да запазите апартамент или за всяко друго запитване моля използвайте формата за предоставената контакт и ние ще ви отгорим възможно най - бързо (обикновено в рамките на 2 работни дни). Резервации се приемат по телефон по всяко време преди първия ден на запазването на апартамента.",
-	"homegallery": "Всеки от нашите 4 апартамента е приятно декориран в елегантен стил, с красива гледка към Черно море. Всеки от апартаментите има своя собствен персонаж и стил и е различен от останалите. Всеки един от тях е индивидуално направен със свой собствен стил за да предложи приятен комфорт в релаксираща атмосфера за вашата неповторима почивка.",
-	"homeprices": "Търсите хубав и досъпен хотел край българското Черноморието? Къща за гости Сезони винаги е била горда с чистота си, удобството и уюта предоставен по времето на вашият престой, които са високи на стандартите си за качество, но ниски на цени. Всички запитвания ще бъдат изпълнени по възможност и апартаментите подготвени преди вашето пристигане за да бъдем сигурни, че ще си прекарате възможно най - добре.",
-	"homelocation": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана.",
-	"homecontact": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля използвайте свържете се с нас. От време на време ние питаме гостите си за коментар на техните впечатления по времето на почивката им, като например 'Добре ли прекарахте?' или 'Как бихме могли да подобрим услугите си?'. Моля не се колебайте и ни пишете. Вашето мнение е винаги добре дошло.",
-	"gallerymaindesc": "Всеки от 4 апартамента е чист, удобен и на изгодна цена. Всички предоставят по 1 двойно легло, 2 единични и 1 сгъваемо канапе, сателитна телевизия, климатик, хладилник и безжичен интернет връзка. Всеки от апартаментите е разположен на свой собствен етаж и разполага с баня и тоалетна. Изложението на къщата дава възможност да се насладите на панорамна гледка, от която се разкрива неповторимото очарование на Черно море. За своите гости къща 'Сезони' предлага механа с 20 места в типичния за региона фолклорен стил, красива лятна градина с чеверме, традиционно българско барбекю, пещ и 4 места за паркинг. ",
-	"ratesmaindesc": "Къща за гости Сезони прави всичко възможно за да предложи на своите посетители добри цени и качествени услуги. С тази цел всички наши служители се опитват да предоставят уникално обслужване и да направят престоя на гостите въможно най - приятен и неповторим. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни). Предоставените цени включват ДДС.",
-	"ratesextrainfo": "* За всеки човек в повече се заплаща по допълнителни 10 Евро на вечер. Има ограничение от 2 допълнителни места на апартамент. <br> ** За достъп до кухнята се заплаща по 5 Евро на вечер. <br> Закуска, обяд и вечеря са приготвени така, че да задоволят индивидуалните изисквания на всеки от гостите ни (всички поръчки биват приемани предварително). <br> За наемане на цялата къща - допълнително договаряне. Деца до 3 години не се таксуват и е безплатно.",
-	"bookingmaindesc": "Разбираме, че понякога резервацията може да е проблем, така че се опитваме да ви помогнем с процеса. За да проверите свободните места или за да резервирате предварително, можете да използвате услугата на за резервиране предоставена по долу. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни).",
-	"locationtmaindesc": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана. В непосредствена близост е до Балчик, Тузлата, нос Калиакра, Златни пясъци, Аладжа манастир, където можете да посетите културни паметници и исторически забележителности.<br>Имате нужда от посрещане на летището, транспорт, запазване на билети или помощ с пощенски услуги? Моля, уведомете ни за това предварително докато правите резервацията. Транспортните услуги може да изискват допълнително заплащане.<br> Можете да използвате нашата интерактивна карта за да видите локацията ни. Компонент за оптимален маршрут до хотела с автомобил е също предоставен по долу.",
-	"yourname": "Вашето име",
-	"required": "задължително",
-	"youremail": "Вашият емайл",
-	"phonenumber": "Телефонен номер",
-	"Subject": "Заглавие",
-	"yourmessage": "Вашето съобщение",
-	"sending__": "изпращане ...",
-	"OK": "OK",
-	"messagesentsuccessfully": "Съобщението е изпратено успешно.",
-	"deliveryfailure": "Съобщението не беше изпратено.",
-	"back": "обратно",
-	"home": "начало",
+	"home": "Начало",
 	"booking": "Резервация",
 	"gallery": "Галерия",
 	"services": "Услуги",
 	"rates": "Цени",
 	"location": "Място",
+	"contact": "Контакти",
 	"language": "език",
-	"prices": "Цени",
-	"ratesonebedroomflatth": "Цени едностаен апартамент",
-	"flexible": "вариращи",
+	"back": "обратно",
+	"awarmwelcome": "Добре дошли",
+	"ratestblth1": "Брой Гости",
+	"ratestblth2": "Октомври до Май",
+	"ratestblth3": "Юни и Сеп­тември",
+	"ratestblth4": "Юли и Август",
+	"upto": "до",
 	"euros": "евро",
+	"phonenumber": "Телефонен номер",
+	"subject": "Заглавие",
+	"required": "задължително",
+	"prices": "Цени",
+	"exteriorinteriorphotos": "Снимки в двора",
+	"diningareaphotos": "Снимки от механата",
+	"flat1photos": "Снимки от апартамента на първия етаж",
+	"flat2photos": "Снимки от апартамента на втория етаж",
+	"flat3photos": "Снимки от апартамента на третия етаж",
+	"flat4photos": "Снимки от самостоятелния апартамент",
+	"yourname": "Вашето име",
+	"youremail": "Вашият емайл",
+	"yourmessage": "Вашето съобщение",
+	"selectaflat": "Изберете апартамент",
+	"___readmore": "... прочетете повече",
+	"sending__": "изпращане ...",
+	"flat": "Апартамент",
+	"OK": "OK",
+	"messagesentsuccessfully": "Съобщението е изпратено успешно.",
+	"deliveryfailure": "Съобщението не беше изпратено.",
+	"suggestaroute": "Покажи маршрут с автомобил до хотела",
+	"returntotheoriginalmap": "Върни се към основната карта",
+	"selectareservationstartdate": "Изберете първи ден на наемане",
+	"selectaduarationindays": "Изберете продължителност на престоя в дни",
+	"ratesonebedroomflatth": "Цени едностаен апартамент",
 	"ratesstandaloneflatth": "Цени за двустаен апартамент",
-	"beachumbrellaandchairsetrentals": "beachumbrellaandchairsetrentals",
-	"beachumbrellaandchairdesc": "beachumbrellaandchairdesc",
-	"pickupservices": "pickupservices",
-	"pickupservicesdesc": "pickupservicesdesc",
-	"food&beverages": "food&beverages",
-	"food&beveragesdesc": "food&beveragesdesc",
-	"gallerymaindesc": "gallerymaindesc",
-	"exteriorinteriorphotos": "exteriorinteriorphotos",
-	"flat1photos": "flat1photos",
-	"flat2photos": "flat2photos",
-	"flat3photos": "flat3photos",
-	"flat4photos": "flat4photos",
-	"diningareaphotos": "diningareaphotos",
-	"locationtmaindesc": "locationtmaindesc",
-	"selectaflat": "selectaflat",
-	"flat": "flat",
-	"selectareservationstartdate": "selectareservationstartdate",
-	"selectaduarationindays": "selectaduarationindays",
-	"awarmwelcome": "awarmwelcome",
-	"homemaindesc": "homemaindesc",
-	"homebooking": "homebooking",
-	"___readmore": "___readmore",
-	"homegallery": "homegallery",
-	"homeprices": "homeprices",
-	"homelocation": "homelocation",
+	"homemaindesc": "Къща за гости Сезони е една от най-добрите с 3 звезди в Албена. Разположена е на края на Албена в старото рибарско селище 'Златната Рибка'. В наши дни 'Златната Рибка' е зона за живеене на кратко разстояние от центъра на Албена и е само на няколко минути от плажа. Къща за гости Сезони предлага 4 удобни апартаменти с климатик с изглед към морето. Тъй като сме частен и семейно поддържан хотел, това ни позволява да се отнасяме с нашите гости със специално внимание и с уважение и очакваме това да бъде взаимно. Също така имаме много добри професионални взаимоотношения с много от местните бизнеси и познаваме много хора в околност, така че ако ви е неопходима помощ или съвет ние сме готови да помогнем където имаме възможност. Приятелската атмосфера за нашите гости е винаги била добре посрещната както и добър съвет даден с усмивка. Винаги се опитваме да направим престоя на гостите ни възможно най-добър и приятен.",
+	"homebooking": "Ако желаете да запазите апартамент или за всяко друго запитване моля използвайте формата за предоставената контакт и ние ще ви отгорим възможно най - бързо (обикновено в рамките на 2 работни дни). Резервации се приемат по телефон по всяко време преди първия ден на запазването на апартамента.",
+	"homegallery": "Всеки от нашите 4 апартамента е приятно декориран в елегантен стил, с красива гледка към Черно море. Всеки от апартаментите има своя собствен персонаж и стил и е различен от останалите. Всеки един от тях е индивидуално направен със свой собствен стил за да предложи приятен комфорт в релаксираща атмосфера за вашата неповторима почивка.",
+	"homeprices": "Търсите хубав и досъпен хотел край българското Черноморието? Къща за гости Сезони винаги е била горда с чистота си, удобството и уюта предоставен по времето на вашият престой, които са високи на стандартите си за качество, но ниски на цени. Всички запитвания ще бъдат изпълнени по възможност и апартаментите подготвени преди вашето пристигане за да бъдем сигурни, че ще си прекарате възможно най - добре.",
+	"homelocation": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана.",
+	"homeservices": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
+	"homecontact": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля използвайте свържете се с нас. От време на време ние питаме гостите си за коментар на техните впечатления по времето на почивката им, като например 'Добре ли прекарахте?' или 'Как бихме могли да подобрим услугите си?'. Моля не се колебайте и ни пишете. Вашето мнение е винаги добре дошло.",
+	"gallerymaindesc": "Всеки от 4 апартамента е чист, удобен и на изгодна цена. Всички предоставят по 1 двойно легло, 2 единични и 1 сгъваемо канапе, сателитна телевизия, климатик, хладилник и безжичен интернет връзка. Всеки от апартаментите е разположен на свой собствен етаж и разполага с баня и тоалетна. Изложението на къщата дава възможност да се насладите на панорамна гледка, от която се разкрива неповторимото очарование на Черно море. За своите гости къща 'Сезони' предлага механа с 20 места в типичния за региона фолклорен стил, красива лятна градина с чеверме, традиционно българско барбекю, пещ и 4 места за паркинг. ",
+	"ratesmaindesc": "Къща за гости Сезони прави всичко възможно за да предложи на своите посетители добри цени и качествени услуги. С тази цел всички наши служители се опитват да предоставят уникално обслужване и да направят престоя на гостите въможно най - приятен и неповторим. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни). Предоставените цени включват ДДС.",
+	"ratesextrainfo": "* За всеки човек в повече се заплаща по допълнителни 10 Евро на вечер. Има ограничение от 2 допълнителни места на апартамент. <br> ** За достъп до кухнята се заплаща по 5 Евро на вечер. <br> Закуска, обяд и вечеря са приготвени така, че да задоволят индивидуалните изисквания на всеки от гостите ни (всички поръчки биват приемани предварително). <br> За наемане на цялата къща - допълнително договаряне. Деца до 3 години не се таксуват и е безплатно.",
+	"contactmaindesc": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля използвайте формата за контакт предоставена по долу и служител от нашият персонал ще ви отговори в рамките на 2 работни дни. Ние ценим вашите коментари, било то добри или не толкова добри. Надяваме се да не получаваме от вторите, но ако имате някаква причина за оплакване, моля не се колебайте и се свържете с нас - вашите впечатления са важни за нас и ще ни помогнат да подобрим нашите услуги.",
+	"bookingmaindesc": "Разбираме, че понякога резервацията може да е проблем, така че се опитваме да ви помогнем с процеса. За да проверите свободните места или за да резервирате предварително, можете да използвате услугата на за резервиране предоставена по долу. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни).",
+	"locationtmaindesc": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана. В непосредствена близост е до Балчик, Тузлата, нос Калиакра, Златни пясъци, Аладжа манастир, където можете да посетите културни паметници и исторически забележителности.<br>Имате нужда от посрещане на летището, транспорт, запазване на билети или помощ с пощенски услуги? Моля, уведомете ни за това предварително докато правите резервацията. Транспортните услуги може да изискват допълнително заплащане.<br> Можете да използвате нашата интерактивна карта за да видите локацията ни. Компонент за оптимален маршрут до хотела с автомобил е също предоставен по долу.",
+	"flexible": "вариращи",
+	"beachumbrellaandchairsetrentals": "Наемане на плажни чадъри и шезлонги",
+	"beachumbrellaandchairdesc": "Не желаете още една почивка да мъкнете чадъри и шезлонги напред, назад в лятната жега? Опитайте различна алтернатива тази почивка и наемете място на плажа с чадър и шезлонги директно от нас. Така ще можете да пристигнете по всяко време и да имате предварително избрано от вас място запазено за целия ден. Така ще се можете да се излежавате на плажа на удобни шезлонги под хладната сянката на плажните чадъри. Шезлонгите и чадърите са налични за използване от 9 часа сутринта. Тази услуга се предостава само за летния период.",
+	"pickupservices": "Посрещане на летище",
+	"pickupservicesdesc": "Нашия персонал е готов да осигури процедури по посрещане от летище, водене от хотела до плажа и обратно, помощ при закупуване на билете и при пощенски услуги. Моля уведомете ни предварително ако имате нужда от която и да е от тези услуги когато извършвате резервацията. Услугите по транспорт и посрещане трябва да бъдат договорени и може да бъдат таксувани допълнително.",
+	"food&beverages": "Храна и напитки",
+	"food&beveragesdesc": "Ние предлагаме прясно приготвени ястия за закуска, обяд и вечеря. Тази услуга се доставя по предварителна поръчка. Не предлагаме меню така, че няма ограничения и можете да поръчате каквото желаете. Всички поръчки ще бъдат изпълнени до колкото е възможно. Всички услуги се таксуват допълнително.",
+	"English": "Английски",
+	"Bulgarian": "Български",
 	"blog": "blog",
-	"homeblog": "homeblog",
-	"homecontact": "homecontact",
-	"suggestaroute": "suggestaroute",
-	"returntotheoriginalmap": "returntotheoriginalmap"
+	"homeblog": "homeblog"
 }
