ReImage folder cleaning up.

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -30,9 +30,10 @@
 	"youremail": "Вашият емайл",
 	"yourmessage": "Вашето съобщение",
 	"selectaflat": "Изберете апартамент",
-	"___readmore": "... прочетете повече",
+	"___readmore": " ... прочетете повече",
 	"sending__": "изпращане ...",
 	"flat": "Апартамент",
+	"send": "send",
 	"OK": "OK",
 	"messagesentsuccessfully": "Съобщението е изпратено успешно.",
 	"deliveryfailure": "Съобщението не беше изпратено.",
@@ -64,6 +65,13 @@
 	"food&beveragesdesc": "Ние предлагаме прясно приготвени ястия за закуска, обяд и вечеря. Тази услуга се доставя по предварителна поръчка. Не предлагаме меню така, че няма ограничения и можете да поръчате каквото желаете. Всички поръчки ще бъдат изпълнени до колкото е възможно. Всички услуги се таксуват допълнително.",
 	"English": "Английски",
 	"Bulgarian": "Български",
-	"blog": "blog",
-	"homeblog": "homeblog"
+	"pagehome": "вила-в-албена-начало",
+	"pagebooking": "вила-в-албена-резервация",
+	"pagegallery": "вила-в-албена-галерия",
+	"pageservices": "вила-в-албена-услуги",
+	"pagerates": "вила-в-албена-цени",
+	"pagelocation": "вила-в-албена-място",
+	"pagecontact": "вила-в-албена-контакти",
+	"title": "title",
+	"{{title}}": "{{title}}"
 }
