--- a/locales/en.json
+++ b/locales/en.json
@@ -33,6 +33,7 @@
 	"___readmore": " ... read more",
 	"sending___": "Sending...",
 	"flat": "Flat",
+	"send": "send",
 	"OK": "OK",
 	"messagesentsuccessfully": "Message sent successfully.",
 	"deliveryfailure": "Delivery failure.",
@@ -64,6 +65,25 @@
 	"food&beveragesdesc": "We provide freshly prepared home cooked meals across breakfast, lunch and dinner service. This service is available on demand and must be requested in advance. There is no menu, so you should just ask what would you prefer. All requests will be met where possible. All services are subject to additional charge.",
 	"English": "English",
 	"Bulgarian": "Bulgarian",
-	"blog": "blog",
-	"homeblog": "homeblog"
+	"sending__": "sending__",
+	"pagehome": "hotel-in-albena-home",
+	"pagebooking": "hotel-in-albena-booking",
+	"pagegallery": "hotel-in-albena-gallery",
+	"pageservices": "hotel-in-albena-services",
+	"pagerates": "hotel-in-albena-rates",
+	"pagelocation": "hotel-in-albena-location",
+	"pagecontact": "hotel-in-albena-contact",
+	"titlehome": "Seasons Villa Guest House in Albena - ",
+	"titlebooking": "Villa Guest House in Albena - holiday on the beach",
+	"titlegallery": "Family run hotel - gallery of the premises",
+	"titleservices": "Seasons Guest House Lodge - services",
+	"titlerates": "Villa in Albena - holiday prices, rates, deals and promotions",
+	"titlelocation": "Seasons Villa Guest House - Black Sea Resort location",
+	"titlecontact": "hotel-in-albena-contact",
+	"titlehotel-in-albena-services": "titlehotel-in-albena-services",
+	"titlehotel-in-albena-booking": "titlehotel-in-albena-booking",
+	"titlehotel-in-albena-gallery": "titlehotel-in-albena-gallery",
+	"titlehotel-in-albena-rates": "titlehotel-in-albena-rates",
+	"titlehotel-in-albena-location": "titlehotel-in-albena-location",
+	"titlehotel-in-albena-contact": "titlehotel-in-albena-contact"
 }
