Contact page requires some additional styling

--- a/locales/en.json
+++ b/locales/en.json
@@ -85,5 +85,23 @@
 	"titlehotel-in-albena-gallery": "titlehotel-in-albena-gallery",
 	"titlehotel-in-albena-rates": "titlehotel-in-albena-rates",
 	"titlehotel-in-albena-location": "titlehotel-in-albena-location",
-	"titlehotel-in-albena-contact": "titlehotel-in-albena-contact"
+	"titlehotel-in-albena-contact": "titlehotel-in-albena-contact",
+	"hotelowner": "Hotel Owner",
+	"kiriltrifonov": "Kiril Trifonov",
+	"contactdetails": "Contact Details",
+	"housenumber": "House Number",
+	"street": "Street",
+	"region": "Region",
+	"dobrich": "Dobrich",
+	"place": "Place",
+	"albena": "Albena",
+	"country": "Country",
+	"bulgaria": "Bulgaria",
+	"telephone": "Telephone",
+	"Hotel Owner": "Hotel Owner",
+	"Street": "Street",
+	"Albena": "Albena",
+	"Dobrich": "Dobrich",
+	"Bulgaria": "Bulgaria",
+	"email": "email"
 }
