Images renamed in order to accomplish SEO.

--- a/locales/en.json
+++ b/locales/en.json
@@ -103,5 +103,7 @@
 	"Albena": "Albena",
 	"Dobrich": "Dobrich",
 	"Bulgaria": "Bulgaria",
-	"email": "email"
+	"email": "email",
+	"titlerefresh": "titlerefresh",
+	"openinghours": "openinghours"
 }
