Dealing with history.back() AJAX request - not finished

--- a/locales/en.json
+++ b/locales/en.json
@@ -47,8 +47,8 @@
 	"homebooking": "We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance. Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days",
 	"homegallery": "All 4 flats are decorated in a truly elegant Bulgarian style and offer a wonderful views of the Black sea. Due to the unique nature of House Season guest house, each flat has a personality of its own and no two are alike. Each individually designed flat has been created with an emphasis on supreme comfort and relaxation",
 	"homeprices": "Looking for a nice and affordable hotel in Bulgaria? Look no further! Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price. All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time",
-	"homelocation": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
-	"homeservices": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
+	"homelocation": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area 6 miles from the historic and ancient City of Balchik",
+	"homeservices": "We take care of our guests' need throughout their stay with a service that is unmistakably House Seasons’. We offer a unique, genuinely bespoke service to all our guests, whether you are travelling alone, as a couple, or as a family. Your stay with us will be smooth and relaxed as our staff will try to take care of everything you need inside and outside the premises",
 	"homecontact": "To arrange a convenient time to view the flats, make a booking or for any other query, contact us. From time to time we ask our customers for their comments on their experiences in dealing with us, 'how they felt they were treated' and 'how can we improve our methods and services'. Please do not hesitate us and drop us a line. Your feedback is always much appreciated",
 	"gallerymaindesc": "Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. Each flat occupies its own floor and has a private bathrooms with shower and toilet facilities. There is a lovely garden located at the rear of a property which features extensive lawn, wooden decking patio and barbeque area. Dining area on underground floor provides seating for up to 30 guest around oak tables in a friendly relaxed atmosphere.",
 	"ratesmaindesc": "Seasons Lodge Guest House is a place dedicated to offering you great value and quality services. With this in mind, all of our members strive to make the guest experience as individual, hospitable and affordable as possible. Upon booking you may request refreshments / buffets (additional charges apply) and indicate your preferred flat. All requests will be met where possible and flats set-up before your arrival to ensure you make the most of your booking time. All prices include VAT (20% Value Added Tax).",
@@ -56,6 +56,7 @@
 	"contactmaindesc": "To arrange a convenient time to view the flats, make a booking or for any other query, please use the form provided below and a member of our friendly staff will get back to you (usually within 2 working days).<br> We value your feedback, both good and not-so-good. Hopefully you will not need to send us any of the latter but, if you do have any cause for complaint, please do not hesitate to contact us - your comments are important to us and will help us improve our service to you and other customers.",
 	"bookingmaindesc": "If you would like to make any bookings or general enquiries please use the form below and a member of our friendly staff will get back to you (usually within 2 working days). Reservations are accepted by phone anytime before the first day of the rental. It is particularly important to make a reservation for offsite rentals, as there are limited quantities of the equipment available. Requests made for offsites after 11:00 am generally cannot be set up until the next day.",
 	"locationtmaindesc": "Staff are available to arrange pick-up services, ticket bookings and assist with postal needs. Please arrange this service while booking the accommodation. Transport and transfer service is subject to additional charge. You can use the google map widget to get a better understanding of the exact location. Driving Route Planner is also included.",
+	"servicesmaindesc": "We take care of our guests' need throughout their stay with a service that is unmistakably House Seasons’. We offer a unique, genuinely bespoke service to all our guests, whether you are travelling alone, as a couple, or as a family. Your stay with us will be smooth and relaxed as our staff will try to take care of everything you need inside and outside the premises. House Seasons team works tirelessly to surpass your expectations through its personal services. Please review our list of services offered below.",
 	"flexible": "flexible",
 	"beachumbrellaandchairsetrentals": "Beach umbrella and chair set rentals",
 	"beachumbrellaandchairdesc": "Don't want another summer of dragging your umbrella and chairs back and forth across the hot sand? Try something different this year and rent your umbrella and chairs from our beach attendants. Our staff will set your equipment at the start of the day and break it down when you're finished for the day.  You'll relax in style in our comfortable chairs under a nice cool umbrella. No muss, no fuss! Chairs and umbrellas are available for use daily at 9 a.m. Available only for the summer season.",
@@ -65,7 +66,6 @@
 	"food&beveragesdesc": "We provide freshly prepared home cooked meals across breakfast, lunch and dinner service. This service is available on demand and must be requested in advance. There is no menu, so you should just ask what would you prefer. All requests will be met where possible. All services are subject to additional charge.",
 	"English": "English",
 	"Bulgarian": "Bulgarian",
-	"sending__": "sending__",
 	"pagehome": "hotel-in-albena-home",
 	"pagebooking": "hotel-in-albena-booking",
 	"pagegallery": "hotel-in-albena-gallery",
@@ -73,7 +73,7 @@
 	"pagerates": "hotel-in-albena-rates",
 	"pagelocation": "hotel-in-albena-location",
 	"pagecontact": "hotel-in-albena-contact",
-	"titlehome": "Seasons Villa Guest House in Albena - ",
+	"titlehome": "Seasons Villa Guest House in Albena",
 	"titlebooking": "Villa Guest House in Albena - holiday on the beach",
 	"titlegallery": "Family run hotel - gallery of the premises",
 	"titleservices": "Seasons Guest House Lodge - services",
@@ -92,18 +92,20 @@
 	"housenumber": "House Number",
 	"street": "Street",
 	"region": "Region",
-	"dobrich": "Dobrich",
 	"place": "Place",
-	"albena": "Albena",
-	"country": "Country",
-	"bulgaria": "Bulgaria",
 	"telephone": "Telephone",
 	"Hotel Owner": "Hotel Owner",
-	"Street": "Street",
 	"Albena": "Albena",
 	"Dobrich": "Dobrich",
 	"Bulgaria": "Bulgaria",
 	"email": "email",
-	"titlerefresh": "titlerefresh",
-	"openinghours": "openinghours"
+	"openinghours": "Opening hours",
+	"monday-through-sunday": "Monday through Sunday, all day",
+	"whole-house": "Whole House",
+	"hotelphotosurl": "hotel-area-photos",
+	"flat1photosurl": "first-flat-photos",
+	"flat2photosurl": "second-flat-photos",
+	"flat3photosurl": "third-flat-photos",
+	"flat4photosurl": "forth-flat-photos",
+	"diningphotosurl": "dining-area-photos"
 }
