--- a/locales/bg.json
+++ b/locales/bg.json
@@ -43,19 +43,20 @@
 	"selectaduarationindays": "Изберете продължителност на престоя в дни",
 	"ratesonebedroomflatth": "Цени едностаен апартамент",
 	"ratesstandaloneflatth": "Цени за двустаен апартамент",
-	"homemaindesc": "Къща за гости Сезони е една от най-добрите с 3 звезди в Албена. Разположена е на края на Албена в старото рибарско селище 'Златната Рибка'. В наши дни 'Златната Рибка' е зона за живеене на кратко разстояние от центъра на Албена и е само на няколко минути от плажа. Къща за гости Сезони предлага 4 удобни апартаменти с климатик с изглед към морето. Тъй като сме частен и семейно поддържан хотел, това ни позволява да се отнасяме с нашите гости със специално внимание и с уважение и очакваме това да бъде взаимно. Също така имаме много добри професионални взаимоотношения с много от местните бизнеси и познаваме много хора в околност, така че ако ви е неопходима помощ или съвет ние сме готови да помогнем където имаме възможност. Приятелската атмосфера за нашите гости е винаги била добре посрещната както и добър съвет даден с усмивка. Винаги се опитваме да направим престоя на гостите ни възможно най-добър и приятен.",
-	"homebooking": "Ако желаете да запазите апартамент или за всяко друго запитване моля използвайте формата за предоставената контакт и ние ще ви отгорим възможно най - бързо (обикновено в рамките на 2 работни дни). Резервации се приемат по телефон по всяко време преди първия ден на запазването на апартамента.",
-	"homegallery": "Всеки от нашите 4 апартамента е приятно декориран в елегантен стил, с красива гледка към Черно море. Всеки от апартаментите има своя собствен персонаж и стил и е различен от останалите. Всеки един от тях е индивидуално направен със свой собствен стил за да предложи приятен комфорт в релаксираща атмосфера за вашата неповторима почивка.",
-	"homeprices": "Търсите хубав и досъпен хотел край българското Черноморието? Къща за гости Сезони винаги е била горда с чистота си, удобството и уюта предоставен по времето на вашият престой, които са високи на стандартите си за качество, но ниски на цени. Всички запитвания ще бъдат изпълнени по възможност и апартаментите подготвени преди вашето пристигане за да бъдем сигурни, че ще си прекарате възможно най - добре.",
-	"homelocation": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана.",
-	"homeservices": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
-	"homecontact": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля използвайте свържете се с нас. От време на време ние питаме гостите си за коментар на техните впечатления по времето на почивката им, като например 'Добре ли прекарахте?' или 'Как бихме могли да подобрим услугите си?'. Моля не се колебайте и ни пишете. Вашето мнение е винаги добре дошло.",
+	"homemaindesc": "Къща за гости Сезони е една от най-добрите с 3 звезди в Албена. Разположена е на края на Албена, в старото рибарско селище 'Златната Рибка'. В наши дни 'Златната Рибка' е спокойна и тиха зона за живеене, която е само на няколко минути от плажа. Къща за гости Сезони предлага 4 уютни апартамента, с очарователен изглед към Черно море. Тъй като сме частен семеен хотел, това ни позволява да се отнасяме с нашите гости със специалното внимание и уважение което заслужават, като очакваме това да бъде взаимно. Също така, имаме добри професионални взаимоотношения с много от местните бизнеси и познаваме много хора в околността, така че, ако е необходима помощ или приятелски съвет даден с усмивка, ние сме винаги готови да помогнем когато имаме възможност. Опитваме да създадем приятелска атмосфера и желаем да направим престоя на гостите ни възможно най-добър, незабравим и приятен.",
+	"homebooking": "За да организирате посещение в удобно за вас време, за да разгледате апартаментите или за да направите резервация, моля използвайте използвайте предоставената форма за резервация. Резервации се приемат по телефон по всяко време преди първия ден на запазването на апартамента",
+	"homegallery": "Апартаментите са приятно декорирани в елегантни стилове и предлагат релаксираща атмосфера за неповторима почивка с красива гледка към Черно море. Всеки един от тях е със свой собствен индивидуален персонаж и съчетава хармония с домашен уют и функционалност",
+	"homeprices": "Търсите хубаво и досъпно място да отседнете край българското Черноморието? Къща за гости Сезони винаги е била горда с чистота си, удобството и уюта предоставени по време престой, които са високи на стандартите си за качество, но ниски на цени",
+	"homelocation": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана",
+	"homeservices": "Желаете да запазите чадър и шезлонги на плажа, посрещане от летището или кетъринг услуги? Екипът на къща за гости Сезони се труди неуморно да надмине очакванията на своите гости, предоставяйки им професионални услуги на високо ниво. Тук ще намерите лист на услугите които предлагаме",
+	"homecontact": "Ако желаете да запазите апартамент или за всяко друго запитване, моля използвайте предоставената за контакт форма и ние ще ви отгорим възможно най-бързо (обикновено в рамките на 2 работни дни). Моля не се колебайте и ни пишете. Вашите въпроси са винаги добре дошли",
 	"gallerymaindesc": "Всеки от 4 апартамента е чист, удобен и на изгодна цена. Всички предоставят по 1 двойно легло, 2 единични и 1 сгъваемо канапе, сателитна телевизия, климатик, хладилник и безжичен интернет връзка. Всеки от апартаментите е разположен на свой собствен етаж и разполага с баня и тоалетна. Изложението на къщата дава възможност да се насладите на панорамна гледка, от която се разкрива неповторимото очарование на Черно море. За своите гости къща 'Сезони' предлага механа с 20 места в типичния за региона фолклорен стил, красива лятна градина с чеверме, традиционно българско барбекю, пещ и 4 места за паркинг. ",
-	"ratesmaindesc": "Къща за гости Сезони прави всичко възможно за да предложи на своите посетители добри цени и качествени услуги. С тази цел всички наши служители се опитват да предоставят уникално обслужване и да направят престоя на гостите въможно най - приятен и неповторим. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни). Предоставените цени включват ДДС.",
+	"ratesmaindesc": "Къща за гости Сезони прави всичко възможно за да предложи на своите посетители добри цени и качествени услуги. С тази цел всички наши служители се опитват да предоставят уникално обслужване и да направят престоя на гостите въможно най - приятен и неповторим. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни).  Всички запитвания ще бъдат изпълнени по възможност и апартаментите подготвени преди вашето пристигане за да бъдем сигурни, че ще си прекарате възможно най - добре. Предоставените цени включват ДДС.",
 	"ratesextrainfo": "* За всеки човек в повече се заплаща по допълнителни 10 Евро на вечер. Има ограничение от 2 допълнителни места на апартамент. <br> ** За достъп до кухнята се заплаща по 5 Евро на вечер. <br> Закуска, обяд и вечеря са приготвени така, че да задоволят индивидуалните изисквания на всеки от гостите ни (всички поръчки биват приемани предварително). <br> За наемане на цялата къща - допълнително договаряне. Деца до 3 години не се таксуват и е безплатно.",
-	"contactmaindesc": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля използвайте формата за контакт предоставена по долу и служител от нашият персонал ще ви отговори в рамките на 2 работни дни. Ние ценим вашите коментари, било то добри или не толкова добри. Надяваме се да не получаваме от вторите, но ако имате някаква причина за оплакване, моля не се колебайте и се свържете с нас - вашите впечатления са важни за нас и ще ни помогнат да подобрим нашите услуги.",
+	"contactmaindesc": "За да организирате посещение в удобно за вас време за да разгледате апартаментите, направите резервация или за всяко друго запитване, моля свържете се с нас като използвате предоставената формата за контакт и служител от нашият персонал ще ви отговори в рамките на 2 работни дни. От време на време ние питаме гостите си за коментар на техните впечатления по времето на почивката им, като например 'Добре ли прекарахте?' или 'Как бихме могли да подобрим услугите си?'. Ние ценим вашите коментари, било то добри или не толкова добри. Надяваме се да не получаваме от вторите, но ако имате някаква причина за оплакване, моля не се колебайте и се свържете с нас - вашите впечатления са важни за нас и ще ни помогнат да подобрим нашите услуги.",
 	"bookingmaindesc": "Разбираме, че понякога резервацията може да е проблем, така че се опитваме да ви помогнем с процеса. За да проверите свободните места или за да резервирате предварително, можете да използвате услугата на за резервиране предоставена по долу. Когато правите резервация можете съшо така да поръчате храна и напитки, а съшо така и да изберете апартамента който най - много ви допада. Нашият екип ще провери свободните дни за избраните от вас дати и ще се свърже обратно с вас (обикновено в рамките на 2 работни дни).",
 	"locationtmaindesc": "Ако сте уморени от динамиката на ежедневието и търсите място за отдих, Вие сте попаднали на правилното място. Тук ще намерите тишината, спокойствието и екологичната чистота на морето съчетана с прохладния полъх на източните склонове на Балкана. В непосредствена близост е до Балчик, Тузлата, нос Калиакра, Златни пясъци, Аладжа манастир, където можете да посетите културни паметници и исторически забележителности.<br>Имате нужда от посрещане на летището, транспорт, запазване на билети или помощ с пощенски услуги? Моля, уведомете ни за това предварително докато правите резервацията. Транспортните услуги може да изискват допълнително заплащане.<br> Можете да използвате нашата интерактивна карта за да видите локацията ни. Компонент за оптимален маршрут до хотела с автомобил е също предоставен по долу.",
+	"servicesmaindesc": "Богатото разнообразие от услуги, които се стремим да поддържаме и обогатяваме, позволява лесното и правилно решение на всеки наш гост да избере именно къща за гости Сезони като място за организиране на своята почивка. Къща за гости Сезони предлага уникални услуги за всички свои гости без значение дали са отседнали сами, като двойка, като семейство или група от приятели. Наша цел е да направим престоя на гостите ни безгрижен и приятен като се опитваме да изпълним всяко индивидуално запитване или нужда. Всички услуги са изпълняват по предварително договаряне и споразумение. ",
 	"flexible": "вариращи",
 	"beachumbrellaandchairsetrentals": "Наемане на плажни чадъри и шезлонги",
 	"beachumbrellaandchairdesc": "Не желаете още една почивка да мъкнете чадъри и шезлонги напред, назад в лятната жега? Опитайте различна алтернатива тази почивка и наемете място на плажа с чадър и шезлонги директно от нас. Така ще можете да пристигнете по всяко време и да имате предварително избрано от вас място запазено за целия ден. Така ще се можете да се излежавате на плажа на удобни шезлонги под хладната сянката на плажните чадъри. Шезлонгите и чадърите са налични за използване от 9 часа сутринта. Тази услуга се предостава само за летния период.",
@@ -72,6 +73,39 @@
 	"pagerates": "вила-в-албена-цени",
 	"pagelocation": "вила-в-албена-място",
 	"pagecontact": "вила-в-албена-контакти",
-	"title": "title",
-	"{{title}}": "{{title}}"
+	"titlehome": "Къща за гости Сезони в Албена",
+	"titlebooking": "Вила в Албена - почивка на море",
+	"titlegallery": "Семеен хотел - галерия на хотела",
+	"titleservices": "Къща за гости Сезони - Услуги",
+	"titlerates": "Почивка в Албена - цени и промоции",
+	"titlelocation": "Вила на брега на Черно море",
+	"titlecontact": "Къща за гости Сезони - Връзка и Контакти",
+	"titlehotel-in-albena-services": "почивка-на-албена-услуги",
+	"titlehotel-in-albena-booking": "почивка-на-албена-резервиране",
+	"titlehotel-in-albena-gallery": "почивка-на-албена-галерия",
+	"titlehotel-in-albena-rates": "почивка-на-албена-цени",
+	"titlehotel-in-albena-location": "почивка-на-албена-място",
+	"titlehotel-in-albena-contact": "почивка-на-албена-контакти",
+	"hotelowner": "Собственик на хотела",
+	"kiriltrifonov": "Кирил Трифонов",
+	"contactdetails": "Информация за връзка",
+	"housenumber": "Номер на къща",
+	"street": "Улица",
+	"region": "Регион",
+	"Dobrich": "Добрич",
+	"place": "Място",
+	"Albena": "Албена",
+	"country": "Страна",
+	"Bulgaria": "България",
+	"telephone": "Телефон",
+	"email": "Поща",
+	"openinghours": "Отворено",
+	"monday-through-sunday": "От Понеделник до Неделя по цял ден",
+	"whole-house": "Цялата къща",
+	"hotelphotosurl": "снимки-на-хотела",
+	"flat1photosurl": "снимки-на-първи-апартамент",
+	"flat2photosurl": "снимки-на-втори-апартамент",
+	"flat3photosurl": "снимки-на-трети-апартаментs",
+	"flat4photosurl": "снимки-на-четвъртък-апартамент",
+	"diningphotosurl": "снимки-на-механата"
 }
