--- a/locales/bg.json
+++ b/locales/bg.json
@@ -73,6 +73,12 @@
 	"pagerates": "вила-в-албена-цени",
 	"pagelocation": "вила-в-албена-място",
 	"pagecontact": "вила-в-албена-контакти",
+	"pagehotelphotos": "снимки-на-хотела",
+	"pageflat1photos": "снимки-на-първи-апартамент",
+	"pageflat2photos": "снимки-на-втори-апартамент",
+	"pageflat2photos": "снимки-на-трети-апартамент",
+	"pageflat2photos": "снимки-на-четвърти-апартамент",
+	"pagediningphotos": "снимки-на-механата",
 	"titlehome": "Къща за гости Сезони в Албена",
 	"titlebooking": "Вила в Албена - почивка на море",
 	"titlegallery": "Семеен хотел - галерия на хотела",
@@ -106,6 +112,7 @@
 	"flat1photosurl": "снимки-на-първи-апартамент",
 	"flat2photosurl": "снимки-на-втори-апартамент",
 	"flat3photosurl": "снимки-на-трети-апартаментs",
-	"flat4photosurl": "снимки-на-четвъртък-апартамент",
-	"diningphotosurl": "снимки-на-механата"
+	"flat4photosurl": "снимки-на-четвърти-апартамент",
+	"diningphotosurl": "снимки-на-механата",
+	"pagenotfound": "Съжаляваме, но не успяхме да намерим страницата която търсите. Моля проверете адреса на страницата отново или се върнете в началото."
 }
