Prices need to be dynamic. Various optimisation needs to be done - images, script minimisation, etc.

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -86,12 +86,12 @@
 	"titlerates": "Почивка в Албена - цени и промоции",
 	"titlelocation": "Вила на брега на Черно море",
 	"titlecontact": "Къща за гости Сезони - Връзка и Контакти",
-	"titlehotel-in-albena-services": "почивка-на-албена-услуги",
-	"titlehotel-in-albena-booking": "почивка-на-албена-резервиране",
-	"titlehotel-in-albena-gallery": "почивка-на-албена-галерия",
-	"titlehotel-in-albena-rates": "почивка-на-албена-цени",
-	"titlehotel-in-albena-location": "почивка-на-албена-място",
-	"titlehotel-in-albena-contact": "почивка-на-албена-контакти",
+	"titlehotelphotos": "Снимки на къща за гости Сезони",
+	"titleflat1photos": "Снимки на първи апартамент",
+	"titleflat2photos": "Снимки на втори апартамент",
+	"titleflat3photos": "Снимки на трети апартамент",
+	"titleflat4photos": "Снимки на самостоятелния апартамент",
+	"titlediningphotos": "Снимки на механата",
 	"hotelowner": "Собственик на хотела",
 	"kiriltrifonov": "Кирил Трифонов",
 	"contactdetails": "Информация за връзка",
@@ -108,11 +108,5 @@
 	"openinghours": "Отворено",
 	"monday-through-sunday": "От Понеделник до Неделя по цял ден",
 	"whole-house": "Цялата къща",
-	"hotelphotosurl": "снимки-на-хотела",
-	"flat1photosurl": "снимки-на-първи-апартамент",
-	"flat2photosurl": "снимки-на-втори-апартамент",
-	"flat3photosurl": "снимки-на-трети-апартаментs",
-	"flat4photosurl": "снимки-на-четвърти-апартамент",
-	"diningphotosurl": "снимки-на-механата",
 	"pagenotfound": "Съжаляваме, но не успяхме да намерим страницата която търсите. Моля проверете адреса на страницата отново или се върнете в началото."
 }
