--- a/locales/en.json
+++ b/locales/en.json
@@ -86,12 +86,12 @@
 	"titlerates": "Villa in Albena - holiday prices, rates, deals and promotions",
 	"titlelocation": "Seasons Villa Guest House - Black Sea Resort location",
 	"titlecontact": "hotel-in-albena-contact",
-	"titlehotel-in-albena-services": "titlehotel-in-albena-services",
-	"titlehotel-in-albena-booking": "titlehotel-in-albena-booking",
-	"titlehotel-in-albena-gallery": "titlehotel-in-albena-gallery",
-	"titlehotel-in-albena-rates": "titlehotel-in-albena-rates",
-	"titlehotel-in-albena-location": "titlehotel-in-albena-location",
-	"titlehotel-in-albena-contact": "titlehotel-in-albena-contact",
+	"titlehotelphotos": "Seasons Villa Guest House premises photos",
+	"titleflat1photos": "First floor flat photos",
+	"titleflat2photos": "Second floor flat photos",
+	"titleflat3photos": "Third floor flat photos",
+	"titleflat4photos": "Standalone flat photos",
+	"titlediningphotos": "Catering areas photos",
 	"hotelowner": "Hotel Owner",
 	"kiriltrifonov": "Kiril Trifonov",
 	"contactdetails": "Contact Details",
@@ -108,11 +108,5 @@
 	"openinghours": "Opening hours",
 	"monday-through-sunday": "Monday through Sunday, all day",
 	"whole-house": "Whole House",
-	"hotelphotosurl": "hotel-area-photos",
-	"flat1photosurl": "first-flat-photos",
-	"flat2photosurl": "second-flat-photos",
-	"flat3photosurl": "third-flat-photos",
-	"flat4photosurl": "forth-flat-photos",
-	"diningphotosurl": "dining-area-photos",
 	"pagenotfound": "Sorry, we couldn't find the page you were looking for. You may want to double check the url in your address bar or you can head home."
 }
